# SPD_sterowanie_procesami_dyskretnymi

./: README.md
lab_01/: CMakeLists.txt  main_00.cpp  main_01.cpp  main_03.cpp  notes.txt
lab_02/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  lab_02
lab_02/.cmake/api/v1/reply/: cache-v2-26134a48eff70e8dcf89.json  cmakeFiles-v1-dddb3039d2e13e40a5f5.json  codemodel-v2-20a284c8305ab5217b8d.json  index-2025-04-06T19-14-50-0126.json  target-copy_data_files-Debug-62596aaab41f8217cd84.json  target-lab_02-Debug-a7287a5cbd6e758bd63c.json
lab_02/data/: SCHRAGE10.out
lab_02/inc/: alg_00_heuristic.h  alg_01_heuristic.h  alg_01_schrage.h  alg_02_brute_force.h  alg_03_wspt.h  task_struct.h
lab_02/src/: alg_00_heuristic.cpp  alg_01_heuristic.cpp  alg_01_schrage.cpp  alg_02_brute_force.cpp  alg_03_wspt.cpp  main.cpp
lab_02/tasks/: .~lock.Temat1_zadania.docx#  Temat1_zadania.docx  Zad1_teoria.docx
lab_04/: CMakeLists.txt
lab_04/instances/: flowshop_n100_m3.csv  flowshop_n10_m3.csv  flowshop_n25_m3.csv
lab_04/python/: generateData.py
lab_04/src/: flowshop.cpp  flowshop.h  main.cpp
temat_03/: CMakeLists.txt  generateData.py
temat_03/data/: instance_1_100.txt  instance_1_15.txt
temat_03/inc/: scheduler.h  task.h
temat_03/src/: main.cpp  scheduler.cpp  task.cpp
